--- a/style.css
+++ b/style.css
@@ -30,12 +30,12 @@ form button {
   font-size: 18px;
 }
 
-.contents {
+.contents-container {
+  background-color: rgba(0, 0, 0, 0.1);
   width: 500px;
   margin: auto;
   margin-top: 20px;
   padding: 20px;
-  background-color: rgba(0, 0, 0, 0.1);
 }
 
 .contents span {
@@ -43,6 +43,7 @@ form button {
   display: block;
   margin-bottom: 10px;
   background-color: rgba(0, 0, 0, 0.15);
+  position: relative;
 }
 
 .contents span:hover {
@@ -53,4 +54,12 @@ form button {
 .contents p {
   margin: 0px;
   padding: 0px;
+}
+
+.contents span button {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  padding: 5px;
+  cursor: pointer;
 }
